# miru-core

./: .gitignore  MANIFEST.in  README.md  meson.build  setup.py
.github/workflows/: code-style.yml  linting.yml  release.yml
examples/: bytecode.py  channels.py  child_gating.py  crash_reporting.py  detached.py  enumerate_applications.py  enumerate_processes.py  get_frontmost_application.py  portal_client.py  portal_server.py  query_system_parameters.py  rpc.py  session_persist_timeout.py  snapshot.py  unpair.py
examples/cpushark/: CpuShark.py  MainWindowController.py
examples/inject_library/: inject_blob.py  inject_file.py
examples/open_service/: plist.py
examples/open_service/dtx/: deviceinfo.py  opengl.py  processcontrol.py  screenshot.py  sysmontap.py
examples/open_service/xpc/: launchapplication.py  listprocesses.py
examples/web_client/: package-lock.json  package.json
examples/web_client/src/store/: index.ts
examples/web_client/src/store/modules/: miru.ts
examples/web_client/src/store/plugins/: miru.ts
miru/: __init__.py  core.py  meson.build
miru/_miru/: extension.c  meson.build
subprojects/: miru-core.wrap
tests/: test_core.py  test_rpc.py
